# GtestAndAppveyor

./: CMakeLists.txt  IsPalindrome.cpp  appveyor.yml  tests.cpp
